<resources>
    <string name="app_name">Recapp</string>

    <string name="title_bookitem_detail">BookItem Detail</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Search Strings -->
    <string name="search_title">Search Resources</string>
    <string name="search_result_message">Results for</string>
    <string name="search_hint">Search for books, videos, and websites</string>

    <!-- Button Strings -->
    <string name="action_explore">Explore</string>

    <!-- Preference Strings -->
    <string name="pref_title_select_a_subject">Subject</string>
    <string name="pref_summary">Select a subject in Computer Science</string>
    <string name="pref_algorithms_and_data_structures">Algorithms &amp; Data Structures</string>
    <string name="pref_android_development">Android Development</string>
    <string name="pref_interview_preparation">Interview Preparation</string>
    <string name="pref_web_development">Web Development</string>

    <!-- Resource list item strings -->
    <string name="item_added_toast_message">Item Added</string>
    <string name="item_removed_toast_message">Item Removed</string>

    <!-- menu strings -->
    <string name="menu_refresh">Refresh</string>

    <!-- User strings -->
    <string name="user_name">Foo Jay Poof</string>
    <string name="user_email">poofpoofj@gmail.com</string>

    <!-- Tab labels -->
    <string name="book_tab_label">Books</string>
    <string name="video_tab_label">Videos</string>
    <string name="website_tab_label">Websites</string>
    <string name="subjects_activity_name">Subjects</string>
    <string name="settings_activity_name">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_item_detail_activity_name">Book Item Detail</string>
    <string name="add_to_mylist">Add to MyList</string>
    <string name="remove_from_mylist">Remove from MyList</string>
    <string name="action_recent">Recent</string>
    <string name="action_media">Media</string>
    <string name="action_mylist">MyList</string>
    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="website_screenshot">Website Screenshot</string>
    <string name="web_visit_button_message">Visit</string>
    <string name="website_visit_image_button">Website Visit Button</string>
    <string name="book_image">Book Image</string>
    <string name="amazon_logo">Amazon Logo</string>
    <string name="filter_view_http_mussieh">intent filter recapp mussieh</string>
    <string name="action_filter">Filter</string>
    <string name="toolbar_image">Toolbar Image</string>
    <string name="action_watch">Watch</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="video_image_button">video_image_button</string>

</resources>
